# solar-works-job-nimbus

./: docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: cloud-functions.yaml  main.yaml
controller/: pipelines.py  tasks.py
db/: bigquery.py
job_nimbus/: company_presentation_ran.py  company_total_deals.py  completed_installs.py  contact_reports_all_fields.py  customer_contact.py  job_nimbus.py  job_nimbus_controller.py  job_nimbus_repo.py  job_nimbus_service.py  job_report_all_fields.py  leads_overall.py  sales.py
libs/: bigquery.py  hyros.py  job_nimbus.py  utils.py
pipeline/: Pipeline.py  PipelineController.py
src/: index.ts
src/bigquery/: bigquery.service.ts
src/job-nimbus/: job-nimbus.service.ts  pipeline.service.test.ts  pipeline.transform.ts  scrape.service.ts
src/job-nimbus/pipeline/: company-presentation-ran.ts  company-total-deals.ts  completed-installs.ts  contact-reports-all-fields.ts  customer-contact.ts  job-report-all-fields.ts  leads-overall.ts  pipeline.interface.ts  sales.ts
src/tasks/: cloud-tasks.service.ts
tasks/: TasksController.py  task_service.py
test/: CompanyPresentationRan.csv  CompanyTotalDeals.csv  CompletedInstall.csv  CustomerContact.csv  JOB REPORT ALL FIELDS.csv  LeadsOverall.csv  Sales.csv  test_units.py
utils/: utils.py
